src/components/Header/Header.module.css
.header {
    justify-items: center;
    align-content: center;
    width: 100%;
    height: 100px;
}

.headerNav {
    background-color: var(--bg);
}

.furnio a {
    display: flex;
    gap: 5px;
    margin-left: -46px;
}

.furnio a, .headerPageNav a {
    text-decoration: none;
    color: inherit;
}

.headerPageNav {
    display: flex;
    align-items: center;
}

.headerPageNav ul {
    list-style: none;
    display: flex;
    justify-content: center;
}

.headerActions button {
    border:none;
    height: 28px;
    width: 28px;
    background: transparent;
    cursor: pointer;
}

.reactIcon {
    height: 28px;
    width: 28px;
}

.profileButton {
    position: relative;
    display: inline-block; 
}

.profileExclam {
    position: absolute;
    top: 5px;
    right: -8px;
    width: 20px;
    height: 20px;
}

.searchIcon {
    stroke-width: 1;
}

@media (min-width: 1024px) {
    /* Header */
    .furnio {
        grid-column: 1 / 3;
    }

    .headerPageNav {
        grid-column: 4 / 9;
        padding: 0 5.55em;
    }

    .headerPageNav ul {
        gap: 75px;
    }

    .headerActions {
        grid-column: 10/13;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        gap: 45px;
    }
    }

